--- a/style.css
+++ b/style.css
@@ -1,9 +1,31 @@
-          p {
+ body {
+background: #CCCCCC;
+    b
+ }
+
+ #banner {
+
+    
+ }
+
+ h1{
+
+    text-align: center;
+}
+
+
+ p {
 
   text-align: center;
 }  
 
-h1 {
+ #missao {
 
-    text-align: center;
+    font-size: 20px
+ }
+em strong {
+    color: #FF00000;
 }
+
+
+#missao
