--- a/style.css
+++ b/style.css
@@ -7,13 +7,10 @@ background: #CCCCCC;
     width: 100%;
  }
 
- h1{
-
-    text-align: center;
-}
-
-h2{
-}
+ .principal {
+ 	background: #CCCCCC;
+ 	padding: 30px;
+ }
 
 
  p {
@@ -38,6 +35,25 @@ em strong {
 }
 
 .beneficios {
-
    background: #FFFFFF;
+   padding: 20px;
+}
+
+.titulocentro {
+	text-align: center;
+}
+
+.tituloprincipal {
+	padding-left: 20px;
+}
+
+ul {
+	display: inline-block;
+	vertical-align: top;
+	width: 20%;
+	margin-right: 15%;
+}
+
+.imagembeneficios {
+	width: 50%;
 }
